# rust-photo-frame

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LEGACY_SWEEP.md  LICENSE  Makefile  README.md  Roadmap.md  TODO.md  config.yaml  make-src-archive.sh  setup-AUDIT-RESULTS.md  tasks.md
assets/: Credit.md  sample-config.yaml
assets/backgrounds/: default-fixed.jpg.b64
assets/fonts/: OFL.txt
assets/pam/: cage
assets/systemd/: buttond.service  cage@.service  photoframe-buttond.service  photoframe-display-manager.service  photoframe-sync.service  photoframe-sync.timer  photoframe-wifi-manager.service
crates/buttond/: Cargo.toml
crates/buttond/src/: main.rs
crates/config-model/: Cargo.toml
crates/config-model/src/: lib.rs
crates/photo-frame/: Cargo.toml
crates/photo-frame/src/: config.rs  events.rs  lib.rs  main.rs  schedule.rs
crates/photo-frame/src/gpu/: debug_overlay.rs
crates/photo-frame/src/platform/: display_power.rs  mod.rs
crates/photo-frame/src/processing/: blur.rs  layout.rs  print_simulation.rs
crates/photo-frame/src/renderer/: iris_tess.rs  mod.rs
crates/photo-frame/src/tasks/: files.rs  greeting_screen.rs  manager.rs  photo_effect.rs  viewer.rs
crates/photo-frame/src/tasks/greeting_screen/: frame.rs  frame.wgsl
crates/photo-frame/src/tasks/shaders/: greeting_frame.wgsl  iris_stroke.wgsl  iris_tess.wgsl  viewer_quad.wgsl
crates/photo-frame/src/tasks/viewer/: scenes.rs  state.rs
crates/photo-frame/src/tasks/viewer/iris/: geometry.rs  mod.rs
crates/photo-frame/src/tasks/viewer/scenes/: asleep.rs  awake.rs  greeting.rs  mod.rs
crates/photo-frame/tests/: config_tests.rs  files_integration.rs  manager_integration.rs  schedule_startup.rs  viewer_surface_handshake.rs
crates/photoframe/: Cargo.toml
crates/photoframe/src/: config.rs  events.rs  lib.rs  main.rs
crates/photoframe/tests/: config_tests.rs  files_integration.rs  manager_integration.rs  shader_validation.rs  viewer_surface_handshake.rs
crates/wifi-manager/: Cargo.toml
crates/wifi-manager/src/: config.rs  hotspot.rs  logging.rs  main.rs  nm.rs  password.rs  qr.rs  status.rs  watch.rs  web.rs
crates/wifi-manager/src/overlay/: mod.rs  ui.rs
crates/wifi-setter/: Cargo.toml
crates/wifi-setter/src/: main.rs  nm.rs  web.rs
crates/wifi-watcher/: Cargo.toml
crates/wifi-watcher/src/: check.rs  hotspot.rs  main.rs  nm.rs  ui.rs
demo/: README.md  demo.yaml  showcase.yaml  tutorial.yaml
developer/: README.md  architecture.md  capture-system-baseline.sh  display-cadence.sh  fake-btime.sh  kiosk-debug.md  overlay-test.sh  staged-upgrade.md  suspend-wifi.sh  test-bad-psk.sh  test-plan.md  testing.md
developer/systemd/: wifi-overlay-test.service
docs/: README.md  advanced.md  build.md  cloud-sync.md  configuration-examples.md  configuration.md  configure.md  credits.md  fabrication.md  filter-options.md  first-boot.md  hardware-notes.md  hardware.md  index.md  install.md  installation.md  kiosk-notes.md  kiosk.md  memory.md  operate.md  operations.md  performance.md  power-and-sleep-notes.md  power-and-sleep.md  quick-reference.md  rpi-performance.md  setup-audit.md  software-notes.md  software-setup.md  software.md  sop.md  test-plan.md  troubleshooting.md  wifi-manager-operations.md  wifi-manager.md  wifi-provisioning.md
maker/: cleat-drill-template.lbrn2  cleat-spacers.3mf  cleat-spacers.scad  cleat-spacers.stl  fabrication.md  maker.md
old-src/: config.rs  display.rs  index.rs  meta.rs  watch.rs
old-src/render/shaders/: photo.wgsl
scripts/: generate_test_images.py  ppm_to_jpeg.c
scripts/legacy_sweep/: all-files.txt  unused-symbols.txt
setup/: 10-kiosk-bookworm.sh  Instructions.md  NOTES.md  README.md  Roadmap.md  diag-kiosk.sh  install-all.sh  install-zram.sh  kiosk-bookworm.sh  kiosk-trixie.sh  setup.sh  system-setup.sh
setup/app/: app-setup.sh  run.sh
setup/app/kiosk/: bash-profile-snippet  photo-frame-kiosk
setup/app/modules/: 05-service-user.sh  10-build.sh  20-networking.sh  20-stage.sh  30-install.sh  30-wifi-watcher.sh  35-fonts.sh  40-photo-app.sh  40-systemd.sh  45-kiosk.sh  50-postcheck.sh  50-sync.sh
setup/app/systemd/: photo-frame.service  wifi-hotspot@.service  wifi-setter.service  wifi-watcher.service
setup/application/: deploy.sh
setup/application/modules/: 05-service-user.sh  10-build.sh  20-stage.sh  (+4 more)
setup/bootstrap/: run.sh
setup/files/: wordlist_small.txt
setup/kiosk/: diagnostics.sh  provision-trixie.sh
setup/lib/: raspi_boot.sh  systemd.sh
setup/migrate/: legacy-cleanup.sh
setup/modules/: 20-networking.sh  30-wifi-watcher.sh  40-photo-app.sh  50-sync.sh
setup/setup-modules/: 00-update-os.sh  01-configure-boot.sh  02-install-rust.sh  03-configure-button-monitor.sh  10-power-button-override.optional.sh
setup/support/: button-monitor.py
setup/system/: cage@.service  configure-networkmanager.sh  create-users-and-perms.sh  install-packages.sh  install-sudoers.sh  install-systemd-units.sh  install.sh  postcheck.sh  run.sh
setup/tools/: verify.sh
showcase/: README.md  activate.sh  deactivate.sh  download-photos.sh  showcase.yaml
src/: buffer.rs  button.rs  config.rs  config_repo.rs  error.rs  events.rs  index.rs  lib.rs  main.rs  matting.rs  meta.rs  scan.rs  watch.rs  web.rs  wifi_setup.rs
src/platform/: display_power.rs
src/processing/: affect.rs  blur.rs  color.rs  filters.rs  fixed_image.rs  layout.rs  mod.rs  photo_effects.rs  print_simulation.rs
src/render/: loader.rs  mod.rs  viewer.rs
src/shaders/: matting_blur.wgsl
src/tasks/: files.rs  greeting_screen.rs  loader.rs  manager.rs  photo_affect.rs  photo_effect.rs  viewer.rs  viewer_layout_tests.rs
src/wifi_setup/: mod.rs  qr_shader.wgsl  ui.rs
tests/: Makefile  check_markdown_links.sh  collect_logs.sh  config_tests.rs  files_integration.rs  manager_integration.rs  matting_integration.rs  powerctl_explicit_output.sh  run_daily.sh  run_smoke.sh  run_wifi_recovery.sh  scan_buffer.rs  scan_metadata.rs  viewer_layout_tests.rs  viewer_scaled_size_tests.rs  viewer_stride_tests.rs
tests/lib/: assert.sh
tools/: fake-btime.sh
(+71 files in other folders)
