[package]
name = "rust-photo-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.7.5", features = ["macros", "form"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
exif = { version = "0.6.1", package = "kamadak-exif" }
git2 = "0.18.3"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
notify = "8.2.0"
pollster = "0.4.0"
rand = "0.8.5"
percent-encoding = "2.3.1"
schemars = "0.8.21"
serde = { version = "1.0.221", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.120"
humantime-serde = "1.1.1"
humantime = "2.1.0"
crossbeam-channel = "0.5.13"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "net"] }
tokio-util = "0.7.16"
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
wgpu = { version = "26.0.1", features = ["wgsl"] }
winit = "0.30.12"
wgpu_glyph = "0.26.0"

[dev-dependencies]
tempfile = "3.22.0"
base64 = "0.22.0"
