[package]
name = "rust-photo-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
exif = { version = "0.6.1", package = "kamadak-exif" }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
jpeg-decoder = "0.3.2"
fast_image_resize = { version = "5.3.0", default-features = false, features = ["only_u8x4"] }
notify = "8.2.0"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.34"
humantime-serde = "1.1.1"
humantime = "2.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.8.6"
crossbeam-channel = "0.5.15"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
wgpu = { version = "26.0.1", features = ["wgsl"] }
winit = "0.30.12"
wgpu_glyph = "0.26.0"
ab_glyph = "0.2.29"
fontdb = "0.23.0"
lyon = "1.0.1"

[dev-dependencies]
tempfile = "3.23.0"
base64 = "0.22.1"

[workspace]
members = [
    "crates/wifi-manager",
]
resolver = "2"
