[package]
name = "buttond"
version = "0.1.0"
edition = "2024"
description = "Power button handler daemon for the Rust photo frame"
authors = ["Rust Photo Frame Team"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.5.48", features = ["derive"] }
evdev = "0.13"
humantime = "2.1.0"
libc = "0.2"
nix = { version = "0.30.0", default-features = false, features = ["fs"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
config-model = { path = "../config-model" }

[dev-dependencies]
tempfile = "3.13.0"
