[package]
name = "rust-photo-frame"
version = "0.1.0"
edition = "2024"
autobins = false
default-run = "photo-frame"

[[bin]]
name = "photo-frame"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
exif = { version = "0.6.1", package = "kamadak-exif" }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
jpeg-decoder = "0.3.2"
fast_image_resize = { version = "5.3.0", default-features = false, features = ["only_u8x4"] }
notify = "8.2.0"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
humantime-serde = "1.1.1"
humantime = "2.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["serde"] }
crossbeam-channel = "0.5.15"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
futures = "0.3.31"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
wgpu = { version = "27.0.0", features = ["wgsl"] }
winit = "0.30.12"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "de4b5b8d4e52310be8df56d82a759593920acc04" }
fontdb = "0.23.0"
palette = "0.7.6"
config-model = { path = "../config-model" }

[dev-dependencies]
tempfile = "3.23.0"
base64 = "0.22.1"
