[package]
name = "wifi-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
softbuffer = "0.4"
fontdb = { version = "0.23", features = ["fs", "memmap"] }
swayipc = "3.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
users = "0.11"
winit = { version = "0.30", features = ["wayland"] }
