[package]
name = "wifi-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
qrcode = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
eframe = { version = "0.28", default-features = false, features = ["wgpu", "wayland", "x11"] }
egui = "0.28"
once_cell = "1.19"
parking_lot = "0.12"
users = "0.11"
libc = "0.2"
